# projects

./: .gitignore  .gitmodules
bed-controller/: README.md  exec  mexec.sh  mos.yml  projectContext.md  putexec
bed-controller-cpp/: myBuild.sh  platformio.ini
bed-controller-cpp/data/: app.js  index.html  provision.html
bed-controller-cpp/src/: BedControl.cpp  BedControl.h  Config.h  NetworkManager.cpp  NetworkManager.h  main.cpp
bed-controller-idf/: .gitignore  CMakeLists.txt  README.md  partitions.csv  partitions_8mb.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.old
bed-controller-idf/components/bed_control/: BedConfig.h  BedControl.cpp  BedControl.h  BedDriver.h  BedService.cpp  BedService.h  CMakeLists.txt  Config.h  StatusLed.h
bed-controller-idf/components/board_config/: BoardConfig.h
bed-controller-idf/components/common/: CMakeLists.txt  Command.h
bed-controller-idf/components/light_control/: CMakeLists.txt  LightConfig.h  LightControl.cpp  LightControl.h
bed-controller-idf/components/matter/: CMakeLists.txt  MatterManager.cpp  MatterManager.h
bed-controller-idf/components/network_manager/: CMakeLists.txt  Command.h  NetworkManager.cpp  NetworkManager.h  embed_assets.py  idf_component.yml  write_build_info.cmake
bed-controller-idf/components/wifiProvisioning/: CMakeLists.txt  app.html  provisioning.html  styles.css  wifiProvisioning.cpp
bed-controller-idf/components/wifiProvisioning/include/: wifiProvisioning.h
bed-controller-idf/configs/: sdkconfig.defaults  sdkconfig.defaults.bed  sdkconfig.defaults.light  sdkconfig.defaults.partitions.esp32_wrover  sdkconfig.defaults.partitions.esp32s3  sdkconfig.defaults.wrover
bed-controller-idf/data/: app.js  bed-visualizer.js  branding.json  index.html  style.css  sw.js
bed-controller-idf/docs/: analog-light-wiring-plan.md  bed-wiring.md  build.md  digital-light-wiring-plan.md  enabling-matter.md  event-stream.md  feature-queue.md  led-behavior.md  light-issues-checklist.md  light-wiring-rgb-12v.md  modularization.md  peer-discovery-plan.md  pin-assignments.md  schmatic.fzz  temp-bed-limit-autocal.md  todo-pinmap-refactor.md  version-history.md
bed-controller-idf/docs/archive/: feature-queue-20251226.md  multi-device-approach.md
bed-controller-idf/main/: BedControl.cpp  BedControl.h  CMakeLists.txt  Kconfig.projbuild  NetworkManager.cpp  NetworkManager.h  idf_component.yml  main.cpp  sdkconfig
bed-controller-idf/partitions/: bed_esp32_wrover.csv  bed_esp32s3.csv  esp32_4MB_ota.csv
bed-controller-idf/tools/: config_target.sh
bed-controller/fs/: app.js  conf.json  index.html  init.js  style.css  utils.js
cg-ap-esp32/: espdif  exec  mos.yml  putexec
cg-ap-esp32/fs/: app.html  index.html  init.js
cg-ap-esp32/src/: main.c
cg-wifi-provision/: .gitignore  CMakeLists.txt  idf.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old  share.sh
cg-wifi-provision/.github/: copilot-instructions.md
cg-wifi-provision/components/wifiProvisioning/: CMakeLists.txt  provisioning.html  wifiProvisioning.cpp
cg-wifi-provision/components/wifiProvisioning/include/: wifiProvisioning.h
cg-wifi-provision/components/wifi_provisioning/: CMakeLists.txt  app.html  provisioning.html  styles.css  wifi_provisioning.cpp
cg-wifi-provision/components/wifi_provisioning/include/: wifi_provisioning.h
cg-wifi-provision/main/: CMakeLists.txt  idf_component.yml  main.cpp
esp32-accesspoint-js-fail/cg-ap-esp32/: exec  mos.yml  putexec
esp32-accesspoint-js-fail/cg-ap-esp32/fs/: app.html  index.html  init.js
esp32-accesspoint-js-fail/cg-ap-esp32/src/: init.js  main.c
esp32-accesspoint-js-fail/gg-ap-esp32/: mos.yml
esp32-display-client/: esp32-display-client.ino
esp32-display-client/data/: main.js
esp32-display-client/tft_calibration/: tft_calibration.ino
esp32-wifi-setup/esp32-wifi-setup/: platformio.ini
esp32-wifi-setup/esp32-wifi-setup/data/: index.html
esp32-wifi-setup/esp32-wifi-setup/src/: main.cpp
gg-ap-esp32/: exec  putexec
gg-ap-esp32/fs/: app.html  index.html  init.js
mb-bed-animation/: index.html
mb-bed-animation/css/: style.css
mb-bed-animation/js/: app.js  bed-visualizer.js
mb-rf-rx/: CMakeLists.txt  share.sh
mb-rf-rx/components/rc_switch/: CMakeLists.txt
mb-rf-rx/data/: sniffer.cpp
mb-rf-rx/main/: main.cpp
mb-rf-tx/: .gitignore  README.md
mb-rf-tx/components/rc_switch/: RCSwitch.cpp
mb-rf-tx/components/rc_switch/include/: RCSwitch.h
mb-rf-tx/main/: CMakeLists.txt  main.cpp
